<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_perso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEEEF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_marginBottom="3dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/editText_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="377dp"
        android:layout_height="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@android:color/black"
        android:outlineSpotShadowColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="40dp">

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Retour_arriere_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foregroundTint="#00FFFFFF"
        android:tint="@android:color/white"
        app:backgroundTint="#EAEEEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#00FFFCFC"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/editText_Name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:text="Nom de la personne"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/editText_Name2"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="Nom de la personne"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="188dp"
        android:layout_weight="1"
        android:text="+33 6 86 57 90 14"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_weight="1"
        android:text="www.facebook.fr/username"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="182dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2sp"
            android:paddingStart="10sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="A propos de moi"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoris_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="168dp"
        android:background="#FFC107"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:backgroundTint="#F4F4F4F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFEB3B"
        app:srcCompat="@drawable/ic_star_white_24dp"
        tools:visibility="visible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoris_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="168dp"
        android:background="#FFEB3B"
        android:backgroundTint="#FFEB3B"
        android:clickable="true"
        android:visibility="gone"
        app:backgroundTint="#F4F4F4F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFEB3B"
        app:srcCompat="@drawable/ic_star_white_24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:text="Bonjour , je suis passionné de Kung Fu, j'aime lire et sortir en foret . N'hesitez pas a cliquer sur mon profil et me rajouter en favoris"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <TextView
        android:id="@+id/editText_Location"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Name"
        app:srcCompat="@drawable/emplace" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="26dp"
        android:layout_height="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/planete" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="26dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/phone" />

</android.support.constraint.ConstraintLayout>